--- a/src/components/Portfolio/portfolio.css
+++ b/src/components/Portfolio/portfolio.css
@@ -18,6 +18,7 @@
     font-size: 3rem;
 }
 
+
 .hire_me {
     grid-column: 1/-1;
     text-align: center;
@@ -64,6 +65,11 @@ video {
 @media only screen and (max-width: 730px) {
     .portfolio .works {
         display: block;
+    }
+    audio {
+        width: 20rem;
+        box-shadow: .5rem .5rem 1rem pink;
+        margin: auto;
     }
     
 }
